# nineties-projects

./: README.md  dim  index.html  parsdemo  zlex  zprof  zyacc
zlex-1.02/: Makefile.in  Makefile.m4  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  install-chk
zlex-1.02/libz/: DEPEND  Makefile.in  Makefile.m4  README  arcutx.c  area.h  argrow.c  argrowx.c  autobuf.h  bsadd.c  bsassign.c  bscomp.c  bscopy.c  bsdel.c  bsdiff.c  bsempty.c  bset.h  bsetp.h  bsfprint.c  bshshsum.c  bsinbset.c  bsinit.c  bsintrsc.c  bsmake.c  bsnew.c  bsnext.c  bsprint.c  bsrange.c  bsrm.c  bssize.c  bssubset.c  bstest.c  bstest.in  bsunary.c  bsunion.c  ccport.h  error.c  error.h  errorz.c  errorz.h  (+59 more)
zlex-1.02/mf/: clean.mf  dist.mf  init.mf  suffix.mf
zlex-1.02/zlex/doc/: Makefile.in  Makefile.m4  README  debug.l  options.texi  optnodes.sed  wc.in  wc.l  wcRevLns.in  wcRevLns.l  zlex.html  zlex.info  zlex.info-1  zlex.info-2  zlex.info-3  zlex.info-4  zlex.ps  zlex.texi
zlex-1.02/zlex/libzlex/: DEPEND  Makefile.in  Makefile.m4  NOTES.txt  README  bytesbuf.c  creatbuf.c  debug.c  delbuf.c  fatal.c  flushbuf.c  get.c  less.c  libdep  libzlex.h  libzlex0.h  libzlexp.h  libzlexs.h  main.c  makeadj.c  makebuf.c  membuf.c  mklibsrc  mklibsrc.m4  more.c  move.c  movetext.c  replace.c  restart.c  savetext.c  sentinel.c  shiftbuf.c  sig.c  ssstk.c  strngbuf.c  swtchbuf.c  terminat.c  unput.c  wrap.c
zlex-1.02/zlex/src/: DEPEND  Makefile.in  Makefile.m4  NOTES.txt  README  SYSDEPS.txt  chrclass.c  chrclass.h  codescan.c  codescan.h  comptab.c  comptab.h  datetime.c  dfa.c  (+32 more)
(+551 files in other folders)
